p2/confs/pod_app1.yaml
apiVersion: v1

kind: Pod           
                    
metadata: 
  name: webserver
spec:

  containers:
  - name: webserver
    image: nginx:stable-trixie-perl
    ports:
    - containerPort: 80
