p2/confs/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
  labels:
    app: one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: one
  template:
    metadata:
      labels:
        app: one
    spec:
      containers:
      - name: app-one
        image: nginx:stable-trixie-perl
        command:
          - sh
          - -c
          - |
            echo "Hello from app1" > /usr/share/nginx/html/index.html
            nginx -g "daemon off;"
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  type: ClusterIP
  selector:
    app: one
  ports:
  - port: 80
    protocol: TCP
